# KydeOS

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: main.rs
src/compositor/: mod.rs
src/config/: mod.rs
src/input/: mod.rs
src/shell/: mod.rs
