[package]
name = "kydeshell"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { version = "0.3", features = ["backend_drm", "backend_libinput", "backend_udev", "wayland_frontend"] }
calloop = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
